--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -95,13 +95,10 @@
                                     Sử dụng KQ học bạ THPT
                                 </a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("Index", "DangKyXetTuyenThang")">
-                                    Tuyển thẳng theo Quy chế
-                                </a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("Ielts", "DangKyXetTuyenKhac")">
-                                    SD chứng chỉ ngoại ngữ
-                                </a>
+                                    Tuyển thẳng theo QĐ
+                                </a>                              
                                 <a class="nav-link style_wspacing" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")">
-                                    SD KQ thi ĐG năng lực
+                                    SD KQ thi đánh giá năng lực hoặc chứng chỉ ngoại ngữ
                                 </a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("dkdtnk", "DangKyXetTuyens")">
                                    ĐK dự thi năng khiếu
