--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
@@ -10,6 +10,14 @@
     th, td {
         white-space: nowrap;
     }
+
+    .bt-hs {
+        width: 120px;
+    }
+
+    .bd-rd {
+        border-radius: 0px !important;
+    }
 </style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
@@ -28,87 +36,101 @@
 <div class="container-fluid px-12">
     <div class="card card-header-actions">
         <div class="card-header">
-            <div ><span id="sp_tieude">Danh sách thí sinh đăng ký xét tuyển bằng học bạ</span></div>           
-        </div>       
-        @*<script>
-            $(document).ready(function () {
-                let sp_tieude = document.getElementById('sp_tieude'); 
-                if (window.innerWidth <= 1200) {
-                    div_tieude.text = "none";     
-                }
-                else {
-                    div_tieude.style.display = "inline";                
-                }
+            <div><span id="sp_tieude">Danh sách thí sinh đăng ký xét tuyển bằng học bạ</span></div>
+            @*<button class="btn btn-outline-primary btn-icon btn-sm" style="display:inline; border-radius:50%;" id="bt_fa_chevron_up" name="bt_fa_chevron_up">
+                    <i class="fas fa-chevron-up"></i>
+                </button>
+                <button class="btn btn-outline-primary btn-icon btn-sm" style="display:none; border-radius:50%;" id="bt_fa_chevron_down" name="bt_fa_chevron_down">
+                    <i class="fas fa-chevron-down"></i>
+                </button>*@
 
-                function reportWindowSize() {
+        </div>
+
+        <div class="card-body">
+            @using (Html.BeginForm("DkxtHocBa", "DangKyXetTuyens", FormMethod.Get))
+            {
+
+                <div class="row g-1">
+                  
+                    <div class="col-xxl-1 col-md-6">
+                        @Html.DropDownList("filteriDotxt", null, new { @class = "form-select form-select-sm bd-rd" })
+                    </div>
+                    <div class="col-xxl-1 col-md-6">
+                        @Html.DropDownList("filteriNvong", null, "N.vọng...", new { @class = "form-select form-select-sm bd-rd" })
+                    </div>
+                    <div class="col-xxl-2 col-md-12">
+                        @Html.DropDownList("filteriNganh", null, "Ngành...", new { @class = "form-select form-select-sm bd-rd" })
+                    </div>
+                    <div class="col-xxl-2 col-md-12">
+                        @Html.DropDownList("filteriLePhi", null, "Theo dõi lệ phí...", new { @class = "form-select form-select-sm bd-rd" })
+                    </div>
+                    <div class="col-xxl-2 col-md-12">
+                        @Html.DropDownList("filteriHoSo", null, "Theo dõi hồ sơ...", new { @class = "form-select form-select-sm bd-rd" })
+                    </div>
+                    <div class="col-xxl-2 col-md-12">
+
+                        @Html.TextBox("searchString", ViewBag.SearchString as string, new { @class = "form-control form-control-sm bd-rd", @placeholder = "Nhập từ khóa..." })
+
+                    </div>
+
+                    <div class="col-xxl-2 col-xl-12">
+                        <div class="d-inline-flex flex-nowrap align-items-center">
+                            <button class="btn btn-outline-primary bd-rd btn-sm" id="bt_search" style="margin-right:4px">Lọc</button>
+                            <a class="btn btn-outline-secondary bd-rd  btn-sm" id="bt_reset" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
+                            <a class="btn btn-outline-primary bd-rd  btn-sm" id="bt_reset" href="#" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                        </div>
+                    </div>
+                    <hr class="mt-3 mb-2" />
+                </div>
+            }
+
+            <script>
+                $(document).ready(function () {
+                    let sp_tieude = document.getElementById('sp_tieude');
                     if (window.innerWidth <= 1200) {
-                        div_tieude.style.display = "none";
-                        div_lb_nam.style.display = "none";
-                        div_txt_nam.style.display = "none";
-                        div_select_dot.style.display = "inline";
-                        bt_reset.style.display = "none";
-                        txt_key_search.style.width = "140px"
-
+                        sp_tieude.innerText = "Danh sách thí sinh ĐKXT bằng học bạ";
                     }
                     else {
-                        div_tieude.style.display = "inline";
-                        div_lb_nam.style.display = "inline";
-                        div_txt_nam.style.display = "inline";
-                        div_select_dot.style.display = "inline";
-                        bt_reset.style.display = "inline";
-                        txt_key_search.style.removeProperty("width");
+                        sp_tieude.innerText = "Danh sách thí sinh đăng ký xét tuyển bằng học bạ";
                     }
-                }
-                window.onresize = reportWindowSize;
-            })
-        </script>*@
-        <div class="card-body">
-            <div class="row">
-                <div class="col-sm-12 col-12">
-                    @using (Html.BeginForm("DkxtHocBa", "DangKyXetTuyens", FormMethod.Get))
-                    {
-                        <div class="col-auto  p-1" id="div_lb_nam">
-                            <label style=" color:black; font-weight:normal">Năm:</label>
-                        </div>
-                        <div class="col-auto p-1" style="padding-right:10px!important" id="div_txt_nam">
-                            <input type="text" id="txtNam" class="form-control form-control" value="@ViewBag.filteriNam" style="width: 60px; " disabled>
-                        </div>
 
-                        <div class="col-auto p-1" id="div_select_dot">
-                            @Html.DropDownList("filteriDotxt", null, new { @class = "form-select", @style = "padding-left:3px; padding-right:30px;" })
-                        </div>
-                        <div class="col-auto  p-1 ">
-                            @Html.TextBox("searchString", ViewBag.SearchString as string, new { @class = "form-control", @placeholder = "Nhập từ khóa..." })
-                        </div>
-                        <div class="col-auto  p-1 ">
-                            <button class="btn btn-outline-primary" id="bt_search" style="width: 75px; padding-left:4px; padding-right:4px ">Tìm kiếm</button>
-                            <a class="btn btn-outline-secondary" id="bt_reset" href="@Url.Action("Index", "ThiSinhDangKys")">Tải lại</a>
-                        </div>
+                    function reportWindowSize() {
+                        if (window.innerWidth <= 1200) {
+                            sp_tieude.innerText = "Danh sách thí sinh ĐKXT bằng học bạ";
+                        }
+                        else {
+                            sp_tieude.innerText = "Danh sách thí sinh đăng ký xét tuyển bằng học bạ";
+                        }
                     }
-                </div>
-            </div>
-            <div class="row">
+                    window.onresize = reportWindowSize;
+                })
+            </script>
+            <div class="row g-1">
                 <div class="col-sm-12 col-12">
                     <div class="table-responsive">
-                        <table class="table">
+                        <table class="table table-hover table-striped">
                             <thead>
                                 <tr>
-                                    <th>Họ  tên</th>
-                                    <th>Nguyện vọng</th>
+                                    <th>Họ tên</th>
+                                    <th>Điện thoại</th>
+                                    <th>N.Vọng</th>
                                     <th>Ngành</th>
                                     <th>Tổ hợp môn</th>
                                     <th>Tổng điểm</th>
-                                    <th>Trạng thái</th>
+                                    <th>Lệ phí</th>
+                                    <th>Hồ sơ</th>
                                     <th style="width:100px">Cập nhật</th>
                                 </tr>
                             </thead>
-
                             <tbody>
                                 @foreach (var item in Model)
                                 {
                                     <tr>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_HoLot) @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_Ten)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.ThiSinhDangKy.ThiSinh_DienThoai)
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Dkxt_NguyenVong)
@@ -122,9 +144,41 @@
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Dkxt_Diem_Tong_Full)
                                         </td>
+
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.Dkxt_TrangThai)
+                                            @{
+                                                if (item.Dkxt_TrangThai == 0)
+                                                {
+                                                    <a href="#" style="color:red; text-decoration:none">Chưa đóng phí</a>
+                                                }
+                                                if (item.Dkxt_TrangThai == 1)
+                                                {
+                                                    <a href="#" style="color: green; text-decoration: none">Đã nộp phí</a>
+                                                }
+                                                if (item.Dkxt_TrangThai == 2)
+                                                {
+                                                    <a href="#" style="color: blue; text-decoration: none">Đã kiểm duyệt</a>
+                                                }
+                                            }
                                         </td>
+                                        <td>
+                                            @{
+                                                if (item.Dkxt_TrangThai_KetQua == 0)
+                                                {
+                                                    <a href="#" class="btn btn-danger btn-sm  bt-hs  bd-rd">Chưa kiểm tra</a>
+                                                }
+                                                if (item.Dkxt_TrangThai_KetQua == 1)
+                                                {
+                                                    <a href="#" class="btn btn-success btn-sm bt-hs  bd-rd">Minh chứng sai</a>
+                                                }
+                                                if (item.Dkxt_TrangThai_KetQua == 2)
+                                                {
+                                                    <a href="#" class="btn btn-primary btn-sm bt-hs  bd-rd">Đã kiểm duyệt</a>
+                                                }
+                                            }
+                                        </td>
+
+
                                         <td style="white-space:nowrap">
                                             <a href="@Url.Action("Edit","DangKyXetTuyens" , new { id = item.Dkxt_ID })" title="Xem chi tiết thông tin thí sinh"><i data-feather="list" style="vertical-align: middle !important "></i></a> |
                                             <a href="@Url.Action("Details","DangKyXetTuyens" , new { id = item.Dkxt_ID })" title="Chỉnh sửa thông tin thí sinh tin thí sinh"><i data-feather="edit" style="vertical-align: middle !important "></i></a> |
@@ -136,8 +190,22 @@
 
                         </table>
                         <!-- Thêm mã phân trang -->
-                        Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
-                        @Html.PagedListPager(Model, page => Url.Action("DkxtHocBa", new { page }))
+                        Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / Tổng @Model.PageCount trang/ (Tổng @ViewBag.totalRecod bản ghi)
+                        @Html.PagedListPager(Model, page => Url.Action("DkxtHocBa", new
+                        {
+                            filteriDotxt = ViewBag.DotxtFilteri,
+                            filteriNvong = ViewBag.NvongFilteri,
+                            filteriNganh = ViewBag.NganhFilteri,
+                            filteriLePhi = ViewBag.LePhiFilteri,
+                            filteriHoSo = ViewBag.HoSoFilteri,
+                            searchString = ViewBag.SearchString,
+                            page
+                        }))
+                        <!-- Kết thúc  -->
+
+                        <!-- Thêm mã phân trang -->
+                        @*Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+        @Html.PagedListPager(Model, page => Url.Action("DkxtHocBa", new { page }))*@
                         <!-- Kết thúc -->
                     </div>
                 </div>
