--- a/Areas/Admin/Views/ToHopMons/Create.cshtml
+++ b/Areas/Admin/Views/ToHopMons/Create.cshtml
@@ -6,10 +6,13 @@
 }
 <script>
     $('document').ready(function () {
+       
+       
         loadData();
         var itemsPerPage = 5; // Number of items to display per page
         var currentPage = 1; // Current page
-
+        var present_on = document.getElementById("present_on");
+        present_on.innerHTML = 1;
         // Hide all rows except the ones for the current page
         function showRows() {
             var startIndex = (currentPage - 1) * itemsPerPage;
@@ -22,6 +25,7 @@
         $(".next").on("click", function (e) {
             e.preventDefault();
             currentPage++;
+            present_on.innerHTML = currentPage;
             showRows();
             updatePaginationState();
         });
@@ -31,6 +35,7 @@
             e.preventDefault();
             if (currentPage > 1) {
                 currentPage--;
+                present_on.innerHTML = currentPage;
                 showRows();
                 updatePaginationState();
             }
@@ -83,12 +88,14 @@
                             htmlString += '<tr>' +
                                 '<td style="vertical-align: middle !important ">' + result.Nganh_MaNganh + "&nbsp;" + ' </td> ' +
                                 '<td style="vertical-align: middle !important "> ' + result.NganhTenNganh + ' </td>' +
-                                '<td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="' + result.Nganh_ID + '"><label class="form-check-label" for="flexCheckDefault"> Chọn </label></div></td>' +
+                                '<td style="width:80px"><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="' + result.Nganh_ID + '"><label class="form-check-label" for="flexCheckDefault"> Chọn </label></div></td>' +
                                 '</tr>'
-
                         }
                     });
                     document.getElementById('infoList').innerHTML = htmlString;
+                    var startIndex = 0;
+                    var endIndex = startIndex + 5;
+                    $(".table tbody tr").hide().slice(startIndex, endIndex).show();
                 } else {
                 }
             },
@@ -159,8 +166,7 @@
         </div>
     </div>
 </header>
-@using (Html.BeginForm())
-{
+@using (Html.BeginForm()){
     <div class="container-fluid px-12">
         <div class="card card-header-actions">
             <div class="card-header">
@@ -170,7 +176,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-xl-6">
-                        <div class="card card-header-actions mt-1 mb-1 ">
+                        <div class="card card-header-actions">
                             <div class="card-header">Thông tin tổ hợp môn mới</div>
                             <div class="card-body">
                                 @Html.AntiForgeryToken()
@@ -234,13 +240,16 @@
                         <div class="card card-header-actions mt-1 mb-1 ">
                             <div class="card-header">Ngành sử dụng tổ hợp môn mới</div>
                             <div class="card-body">
-                                <table id="tableNganh" class="table table-striped table-hover">
+                                <table id="tableNganh" class="table table-striped table-hover table-sm">
                                     <tbody id="infoList"></tbody>
                                 </table>
-                                <nav>
-                                    <ul class="pagination justify-content-center">
+                                <nav >
+                                    <ul class="pagination justify-content-center" style="margin-top:0px; margin-bottom:0px" >
                                         <li class="page-item disabled">
                                             <a class="page-link prev" href="#" tabindex="-1">Trước</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a class="page-link" id="present_on" href="#"></a>
                                         </li>
                                         <li class="page-item">
                                             <a class="page-link next" href="#">Sau</a>
@@ -260,6 +269,7 @@
                     <div class="col-md-2 col-3">
                         @Html.ActionLink("Hủy bỏ", "Index", null, new { @class = "btn btn-outline-danger", @style = "width:100%; white-space:nowrap" })
                     </div>
+                   
                 </div>
             </div>
         </div>
