--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
@@ -13,7 +13,7 @@
     }
 
     .bt-hs {
-        width: 120px;
+        width: 80px;
     }
 
     .bd-rd {
@@ -150,15 +150,15 @@
                                                     @{
                                                         if (item.Dkxt_KQTQG_TrangThai == 0)
                                                         {
-                                                            <a href="#" style="color:red; text-decoration:none">Chưa đóng phí</a>
+                                                            <a href="#" style="color:red; text-decoration:none">Chưa đóng</a>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai == 1)
                                                         {
-                                                            <a href="#" style="color: green; text-decoration: none">Đã nộp phí</a>
+                                                            <a href="#" style="color: green; text-decoration: none">Đã nộp</a>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai == 2)
                                                         {
-                                                            <a href="#" style="color: blue; text-decoration: none">Đã kiểm duyệt</a>
+                                                            <a href="#" style="color: blue; text-decoration: none">Đã duyệt</a>
                                                         }
                                                     }
                                                 </td>
@@ -166,15 +166,15 @@
                                                     @{
                                                         if (item.Dkxt_KQTQG_TrangThai_KetQua == 0)
                                                         {
-                                                            <a href="#" class="btn btn-outline-danger btn-sm bt-hs">Chưa kiểm tra</a>
+                                                            <a href="#" class="btn btn-outline-danger btn-sm bt-hs bd-rd">Chưa KT</a>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_KetQua == 1)
                                                         {
-                                                            <a href="#" class="btn btn-outline-success btn-sm bt-hs">Minh chứng sai</a>
+                                                            <a href="#" class="btn btn-outline-success btn-sm bt-hs bd-rd">MC sai</a>
                                                         }
                                                         if (item.Dkxt_KQTQG_TrangThai_KetQua == 2)
                                                         {
-                                                            <a href="#" class="btn btn-outline-primary btn-sm bt-hs">Đã kiểm duyệt</a>
+                                                            <a href="#" class="btn btn-outline-primary btn-sm bt-hs bd-rd">Đã KT</a>
                                                         }
                                                     }
                                                 </td>
