--- a/Areas/Admin/Views/LienCapTHCS/Index.cshtml
+++ b/Areas/Admin/Views/LienCapTHCS/Index.cshtml
@@ -7,192 +7,156 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css" />
-<link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.3.0/css/fixedColumns.dataTables.min.css" />
-
 <style>
-    /* Ensure that the demo table scrolls */
     th, td {
         white-space: nowrap;
     }
 
-    div.dataTables_wrapper {
-        margin: 0 auto;
+    .bt-hs {
+        width: 80px;
+    }
+
+    .bd-rd {
+        border-radius: 0px !important;
+    }
+
+    .p-mg {
+        margin: 0px !important;
     }
 </style>
+
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <h1 class="page-header-title mb-2">
+                    <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Liên cấp THCS
-                    </h1>
-                </div>
-                <div class="col-12 col-xl-auto mb-3">
-                    @*<a class="btn btn-sm btn-light text-primary" href="@Url.Action("Create","Huyens")">
-                            <i class="me-1" data-feather="user-plus"></i>
-                            Thêm mới
-                        </a>*@
+                        <span>Quản lý học sinh đăng ký dự tuyển trường liên cấp THCS</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </header>
-<div class="container-fluid px-4">
-    <div class="card">
+<div class="container-fluid px-12">
+    <div class="card card-collapsable mt-1 mb-1">
+        <div class="card-header">
+            <div><span id="sp_tieude">Danh sách học sinh đăng ký</span></div>
+        </div>
         <div class="card-body">
-            <div class="col-12 table-responsive">
-                <table id="myTable" class="stripe row-border order-column cell-border" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th>
-                                Mã định danh
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_HoTen)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_NoiSinh)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_Email)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_NoiCuTru)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_TruongTH)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_UuTien)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_ThongTinCha)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_ThongTinMe)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_DiemHocTap)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_MucDoNangLuc)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_MucDoPhamChat)
-                            </th>
-                          
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_TrangThai)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.FirstOrDefault().HocSinh_GhiChu)
-                            </th>
-                            <th>Hành Động</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_DinhDanh)
-                                </td>
-                                <td>
-                                    - Họ tên: @Html.DisplayFor(modelItem => item.HocSinh_HoTen)
-                                    <br />
-                                    <div style="float:left;margin-right:2px">
-                                        - Giới tính:
-                                    </div> @{ if (@item.HocSinh_GioiTinh == 0)
-                                        { <div style="float:left">  Nam</div> }
-                                        else
-                                        {
-                                            <div style="float:left">  Nữ </div>
-                                        }
-                                    }
-                                    <div style="float:left"> - Ngày sinh:  @item.HocSinh_NgaySinh</div>
+            @using (Html.BeginForm("DkxtTt", "DangKyXetTuyens", FormMethod.Get))
+            {
+                <div class="row g-1">
+                    <div class="col-xxl-1 col-md-12">
+                            @Html.DropDownList("filteriDotxt", null, new { @class = "form-select form-select-sm bd-rd" })
+                        </div>
+                        <div class="col-xxl-1 col-md-12">
+                            @Html.DropDownList("filteriNvong", null, "N.vọng...", new { @class = "form-select form-select-sm bd-rd" })
+                        </div>
+                        <div class="col-xxl-2 col-md-12">
+                            @Html.DropDownList("filteriNganh", null, "Ngành...", new { @class = "form-select form-select-sm bd-rd" })
+                        </div>
+                        <div class="col-xxl-2 col-md-12">
+                            @Html.DropDownList("filteriLePhi", null, "Theo dõi lệ phí...", new { @class = "form-select form-select-sm bd-rd" })
+                        </div>
+                        <div class="col-xxl-2 col-md-12">
+                            @Html.DropDownList("filteriHoSo", null, "Theo dõi hồ sơ...", new { @class = "form-select form-select-sm bd-rd" })
+                        </div>
+                        <div class="col-xxl-2 col-md-12">
+                            @Html.TextBox("searchString", ViewBag.SearchString as string, new { @class = "form-control form-control-sm bd-rd", @placeholder = "Nhập từ khóa..." })
+                        </div>
+                    <div class="col-xxl-2 col-xl-12">
+                        <div class="d-inline-flex flex-nowrap align-items-center">
+                            <button class="btn btn-outline-primary bd-rd btn-sm" id="bt_search" style="margin-right:4px">Lọc</button>
+                            <a class="btn btn-outline-secondary bd-rd  btn-sm" id="bt_reset" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
+                            <a class="btn btn-outline-primary bd-rd  btn-sm" id="bt_reset" href="#" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                        </div>
+                    </div>
+                    <hr class="mt-3 mb-2" />
+                </div>
+            }
 
+            <div class="row">
+                <div class="col-lg-12 col-12">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayName("Thông tin HS")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Thông tin điểm")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Tổng điểm")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Thông phụ huynh")
+                                    </th>
+                                    <th>
+                                        @Html.DisplayName("Trạng thái")
+                                    </th>
+                                    <th style="width:100px">
+                                        @Html.DisplayName("Cập nhật")
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
 
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_NoiSinh)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_Email)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_NoiCuTru)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_TruongTH)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_UuTien)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_ThongTinCha)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_ThongTinMe)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_DiemHocTap)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_MucDoNangLuc)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_MucDoPhamChat)
-                                </td>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            <p class="p-mg">- Mã ĐD: 038215000012</p>
+                                            <p class="p-mg">- Họ tên: @item.HocSinh_HoTen</p>
+                                            @{ if (@item.HocSinh_GioiTinh == 0)
+                                                {<p class="p-mg">- Giới tính: Nam</p>}
+                                                else
+                                                {<p class="p-mg">- Giới tính: Nữ</p>}}
+                                            <p class="p-mg">- Ngày sinh:  @item.HocSinh_NgaySinh</p>
+                                            <p class="p-mg">- Diện ưu tiên: Không</p>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_TrangThai)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.HocSinh_GhiChu)
-                                </td>
-                                <td>
-                                    <a class="btn btn-outline-success btn-sm" href="@Url.Action("Details","LienCapTHCS" , new { id = item.HocSinh_ID})">  Chi Tiết </a>&nbsp;
-                                    @*@Html.ActionLink("Edit", "Edit", new { id = item.HocSinh_ID }) |*@
-                                    @*@Html.ActionLink("Chi tiết", "Details", new { id = item.HocSinh_ID })*@
-                                    @*@Html.ActionLink("Delete", "Delete", new { id = item.HocSinh_ID })*@
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-                <!-- Thêm mã phân trang -->
-               
-                Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
-
-                @Html.PagedListPager(Model, page => Url.Action("Index",
-                    new { page }))
-                <!-- Kết thúc -->
+                                        </td>
+                                        <td>
+                                            <p class="p-mg">- Điểm Toán: @item.Monhocs.Toan </p>
+                                            <p class="p-mg">- Điểm Tiếng việt: @item.Monhocs.TiengViet</p>
+                                            <p class="p-mg">- Điểm Tự nhiên và KH/XH: @item.Monhocs.TuNhien</p>
+                                            <p class="p-mg">- Điểm Lịch sử và Địa lý: @item.Monhocs.LichSuDiaLy</p>
+                                            <p class="p-mg">- Điểm Tiếng Anh: @item.Monhocs.TiengAnh</p>
+                                        </td>
+                                        <td style="vertical-align:middle">
+                                            @*<p class="p-mg">@item.Monhocs.Toan + @item.Monhocs.TiengViet + @item.Monhocs.TuNhien + @item.Monhocs.LichSuDiaLy + @item.Monhocs.TiengAnh </p>*@
+                                            @Html.DisplayFor(mdit => item.TongDiem)
+                                        </td>
+                                        <td>
+                                            <p class="p-mg">- Họ tên bố: @item.PhBo.HoTen </p>
+                                            <p class="p-mg">- Điện thoại: @item.PhBo.SoDienThoai</p>
+                                            <p class="p-mg">- Họ tên mẹ: @item.PhMe.HoTen</p>
+                                            <p class="p-mg">- Điện thoại: @item.PhMe.SoDienThoai</p>
+                                        </td>
+                                        <td>
+                                            <a class="btn  btn-outline-success btn-sm" href="@Url.Action("Details", "LienCapTHCS", new { id = item.HocSinh_ID })">Đã kiểm tra</a>
+                                        </td>
+                                        <td style="white-space:nowrap">
+                                            <a href="@Url.Action("Edit","LienCapTHCS" , new { id = item.HocSinh_ID })" title="Xem chi tiết thông tin thí sinh"><i data-feather="list" style="vertical-align: middle !important "></i></a> |
+                                            <a href="@Url.Action("Details","LienCapTHCS" , new { id = item.HocSinh_ID })" title="Chỉnh sửa thông tin thí sinh tin thí sinh"><i data-feather="edit" style="vertical-align: middle !important "></i></a> |
+                                            <a href="@Url.Action("Delete","LienCapTHCS" , new { id = item.HocSinh_ID })" title="Xóa thông tin thí sinh"><i data-feather="trash-2" style="vertical-align:middle!important" disable></i></a>
+                                        </td>                                      
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                        <!-- Thêm mã phân trang -->
+                        Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+                        @Html.PagedListPager(Model, page => Url.Action("Index",
+                            new { page }))
+                        <!-- Kết thúc -->
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
-<script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.js"></script>
-<script src="https://cdn.datatables.net/fixedcolumns/4.3.0/js/dataTables.fixedColumns.min.js"></script>
-
-
-<script>
-
-
-    new DataTable('#myTable', {
-        fixedColumns: {
-            right: 1
-        },
-        paging: false,
-        scrollCollapse: true,
-        scrollX: true,
-        //scrollY: 300,
-        searching: true,
-        bInfo: false,
-        oLanguage: {
-            sSearch: "Tìm kiếm:"
-        }
-    });
-</script>
